# rustebra

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  TODO.md  book.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-docs.yml  publish-crate.yml
docs/: CONTRIBUTING.md  Gemfile  MATHEMATICS.md  README.md  SUMMARY.md  _config.yml  config.yml  index.md
docs/_layouts/: default.html
docs/adr/: 0001-hybrid-memory-allocation.md  0002-single-crate-with-feature-flags.md  0003-separated-static-dynamic-traits.md  0004-per-module-error-handling.md  0005-generic-scalar-type.md  0006-trait-based-generic-architecture.md  0007-public-elementary-scalar-functions.md  0008-two-level-public-api.md  0009-numerical-tolerance-for-approximate-zero.md  0010-sparse-matrix-public-api.md  0011-sorted-csr-matrix.md  0012-sparse-entry-pruning.md  index.md
docs/algorithms/: README.md  cholesky.md  cofactor-expansion.md  condition-number.md  index.md  lu.md  qr.md  rank.md  svd.md
examples/: algorithm_matrix.rs  dynamic_matrix.rs  dynamic_vector.rs  pid_controller.rs  scalar.rs  static_matrix.rs  static_vector.rs
examples/algorithm/: main.rs  vector.rs
examples/matrix/: dynamic_matrix.rs  main.rs  static_matrix.rs
examples/scalar/: f32.rs  f64.rs  main.rs  sqrt.rs
examples/sparse/: add.rs  convert.rs  coo.rs  csc.rs  csr.rs  linear_op.rs  main.rs  matmat.rs  matvec.rs  prune.rs  scale.rs  sorted_csr.rs  spmm.rs
examples/storage/: dynamic.rs  main.rs  static.rs
examples/vector/: dynamic_vector.rs  main.rs  static_vector.rs
firmware/cortex-m3-lm3s6965evb/: Cargo.toml
roadmap/: BOARD.md  BUGS.md  COVERAGE.md  DOCS.md  ISSUES.md
src/: lib.rs
src/algorithm/: matrix.rs  vector.rs
src/krylov/: inverse_power_iteration.rs  (+2 more)
tests/: matrix.rs  no_alloc.rs  scalar.rs  vector.rs
theme/: head.hbs
(+92 files in other folders)
