[package]
name = "rustebra"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A hybrid no_std/alloc linear algebra crate for Rust, scaling from embedded targets to dynamic Krylov subspace solvers."
repository = "https://github.com/tec-eli/rustebra"

[dependencies]

[features]
alloc = []

[[example]]
name = "dynamic_vector"
path = "examples/dynamic_vector.rs"
required-features = ["alloc"]

[[example]]
name = "dynamic_matrix"
path = "examples/dynamic_matrix.rs"
required-features = ["alloc"]