[package]
name = "rustebra"
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"
description = "A hybrid no_std/alloc linear algebra crate for Rust, scaling from embedded targets to dynamic Krylov subspace solvers."
repository = "https://github.com/tec-eli/rustebra"
keywords = ["linear-algebra", "matrix", "vector", "no-std", "numerical"]
categories = ["algorithms", "mathematics", "no-std"]
documentation = "https://docs.rs/rustebra"
readme = "README.md"

[dependencies]

[features]
alloc = []

[[example]]
name = "sparse"
required-features = ["alloc"]

[profile.release]
panic = "abort"
lto = true